--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,16 @@
 
 .header {
-  text-align: center;
-}
-
-.header-images {
-  height: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 10%;
   padding: 20px;
   border-bottom: 2px solid black;
+}
+
+.header-login {
+  width: 10%;
+  padding-right: 10px;
 }
 
 .header-logo {
@@ -16,6 +20,9 @@
 }
 
 .header-main {
-  width: 20%;
+	display: block;
+  width: 200px;
+	height: 75px;
   padding: 5px;
+	margin: auto;
 }
